--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    android {
+        viewBinding {
+            enabled = true
+        }
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
