--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
         android:name=".LocationUpdateApp"
         android:allowBackup="true"
@@ -22,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".ForegroundLocationService" android:exported="false" />
+        <service android:name=".foreground.ForegroundLocationService" android:exported="false" />
     </application>
 
 </manifest>
