--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".LocationUpdateApp"
@@ -37,6 +38,14 @@
                 <action android:name="ch.demo.locationupdate.ACTION_PROCESS_UPDATES" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".foreground.TestForegroundService"
+            android:enabled="true"
+            android:exported="false">
+
+        </service>
+
     </application>
 
 </manifest>
